Updating parallel python template and setup to handle string arguments

--- a/rsopt/package_data/run_parallel_python.py.jinja
+++ b/rsopt/package_data/run_parallel_python.py.jinja
@@ -4,6 +4,9 @@ input_dict = {
 {% for key, value in dict_item.items() %}
     '{{key}}': {{value}}{% if not loop.last %},{% endif %}
 {% endfor %}
+{% for key, value in dict_item_str.items() %}
+    '{{key}}': '{{value}}'{% if not loop.last %},{% endif %}
+{% endfor %}
 }
 
 m = run_path_as_module('{{full_input_file_path}}')
