Make sure commas in place for dict items in parallel python template

--- a/rsopt/package_data/run_parallel_python.py.jinja
+++ b/rsopt/package_data/run_parallel_python.py.jinja
@@ -2,7 +2,7 @@ from pykern.pkrunpy import run_path_as_module
 
 input_dict = {
 {% for key, value in dict_item.items() %}
-    '{{key}}': {{value}}{% if not loop.last %},{% endif %}
+    '{{key}}': {{value}},
 {% endfor %}
 {% for key, value in dict_item_str.items() %}
     '{{key}}': '{{value}}'{% if not loop.last %},{% endif %}
