--- a/rsopt/package_data/run_parallel_python.py.jinja
+++ b/rsopt/package_data/run_parallel_python.py.jinja
@@ -1,4 +1,4 @@
-from pykern.pkrunpy import run_path_as_module
+from rsopt.util import run_path_as_module
 
 input_dict = {
 {% for key, value in dict_item.items() %}
